# geometry-dash-mcp-geode

./: .gitignore  EXAMPLES.md  FINAL_INSTRUCTIONS.md  GD_LEVEL_DESIGN.md  GD_OBJECT_IDS.md  GIGACHAT_VISION_README.md  HOT_RELOAD_GUIDE.md  OFFSETS_GUIDE.md  QUICK_START.md  README.md  README_GEODE.md  SETUP_COMPLETE.md  SETUP_GEODE.md  TROUBLESHOOTING.md  USAGE.md  check_balance.py  create-beautiful-level.py  create-level-fixed.py  create-one-block.py  create_test_image.py  gd-cli.py  gigachat_vision.py  gigachat_vision_fixed.py  gigachat_vision_mcp.py  mcp-server-wrapper.py  mcp-server.bat  mcp-server.py  noame2289.gdmcp.geode  opencode.json  package-lock.json  package.json  pyproject.toml  test-all-commands-auto.py  test-all-commands.py  test-command.py  test-correct-format.py  test-ipc.mjs  test-mcp-init.py  test-mcp.js  test-minimal-mcp.py  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json
.devin/: config.json
.github/workflows/: build.yml
gd-injector/: CMakeLists.txt  main.cpp
geode-mod/: CMakeLists.txt  about.md  mod.json
geode-mod/src/: CommandHandlers.hpp  MCPPanel.hpp  main.cpp
mcp_server_gd/: __init__.py  __main__.py  renderer.py
mcp_server_gd/deco_library/: hell_style.json  purple_neon.json
src/: index.ts  ipc-client.ts  level-encoder.ts  types.ts
src/mcp_server_gd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
